[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
authors = [{ name = "arl", email = "me@arielle.codes" }]
license = "MIT"
license-files = ["LICENSE", "LICENSE_THIRD_PARTY"]
requires-python = ">=3.10"
name = "qtbotbase"
version = "0.0.1"
description = "Helpful bot for python, github, and discord things."
dependencies = [
    "aiodns~=3.4",
    "aiohttp[speedups]~=3.11.18",
    "yarl<2.0.0,>=1.17.2",
    "arrow~=1.3.0",
    "cachingutils @ git+https://github.com/onerandomusername/cachingutils.git@vcokltfre/feat/v2",
    "disnake @ git+https://github.com/DisnakeDev/disnake.git@master",
    "orjson<4.0.0,>=3.10.18",
    "psutil<6.0.0,>=5.9.8",
    "python-dateutil<3.0.0,>=2.9.0",
    "rapidfuzz<4.0.0,>=3.13.0",
    "alembic<2.0.0,>=1.15.2",
    "SQLAlchemy[asyncio]~=2.0.41",
    "rich>=14.1.0,<15.0.0",
    "aiosqlite>=0.21.0",
]

[dependency-groups]
dev = [
    "watchfiles<2.0.0,>=1.0.5",
    "python-dotenv<2.0.0,>=1.1.0",
]
tools = [
    "black<26.0.0,>=25.9.0",
    "isort==6.1.0",
    "poethepoet>=0.37.0",
    "prek>=0.2.1,<0.3",
    "ruff==0.13.1",
]
typing = ["pyright==1.1.405"]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
atomic = true
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 120
lines_after_imports = 2
multi_line_output = 3
use_parentheses = true
known_first_party = ["qtbotbase"]

[tool.ruff]
line-length = 120

[tool.ruff.lint.isort]
known-first-party = ["qtbotbase"]


[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "W", # pycodestyle
    "S", # bandit
    # "RUF", # ruff specific exceptions
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "C",    # flake8-comprehensions
    "D",    # flake-docstrings
    "DTZ",  # flake8-datetimez
    "G",    # flake8-logging-format
    "Q",    # flake8-quotes
    "T201",
    "T203", # flake8-print
]
ignore = [
    # Missing Docstrings
    "D100",
    "D101",
    "D104",
    "D105",
    "D106",
    "D107",
    # Docstring Whitespace
    "D203",
    "D212",
    "D214",
    "D215",
    # Docstring Content
    "D400",
    "D402",
    "D404",
    "D405",
    "D406",
    "D407",
    "D408",
    "D409",
    "D410",
    "D411",
    "D412",
    "D413",
    "D414",
    "D416",
    "D417",

    # ignore imperative mood for now
    "D401",
    # Type Annotations
    "ANN002",
    "ANN003",
    "ANN204",
    "ANN206",
    "ANN401",

    # temporarily disabled
    "C901", # mccabe
    "G004", # Logging statement uses f-string
    "S101", # Use of `assert` detected
    "S110", # try-except-pass
    "S311", # pseduo-random generators, random is used everywhere for random choices.
]

[tool.ruff.lint.per-file-ignores]
"qtbotbase/alembic/*" = ["D"]
"_global_source_snekcode.py" = ["T201"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.poe.tasks]
start = { cmd = "python -m qtbotbase", help = "Start the bot", envfile = ".env"}
lint = { cmd = "prek run --all-files", help = "Lint the source code" }
prek = { cmd = "prek install", help = "Install the git pre-commit hooks" }
pyright = { cmd = "dotenv -f task.env run -- pyright", help = "Run pyright" }
sync = { cmd = "uv sync --all-groups --all-extras", help = "Sync all groups and extras to a local environment" }

[tool.pyright]
typeCheckingMode = "basic"
include = ["qtbotbase", "*.py"]

strictParameterNoneValue = false

[tool.mdformat]
wrap = 80
